--- a/index.html
+++ b/index.html
@@ -1,18 +1,44 @@
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDFs</title>
-    <style>
-      a{
-        display: block;
-        padding: 10px;
-      }
-    </style>
-  </head>
-  <body>
-    <a href="https://drive.google.com/file/d/1v686ZL2GM4-qrJsbMFGeGn1AF1wtllT7/view?usp=sharing">Nuclear</a>
-    <a href="https://drive.google.com/file/d/1P0p1vkNY1r9mCdUGifAyWqdo6oBNds-5/view?usp=sharing">Radiation</a>
-    <a href="https://drive.google.com/file/d/1jMQEH_8E_7l7toJXLkfLPKrYOYdHmQgZ/view?usp=sharing">Programming</a>
-    <a href="https://drive.google.com/file/d/1wSO6Jo0Q7xlucjBfozca5wshJD8mtJ74/view?usp=sharing">Practical</a>
-  </body>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>PDFs</title>
+        <style>
+            *{
+                padding:0;
+                margin:0;
+            }
+            p{
+                padding: 10px;
+                margin: 10px;
+                font-size: 35px;
+                background-color: yellow;
+                box-shadow: 0px 0px 3px #5557;
+                border-radius: 4px;
+            }
+            a{
+                display: block;
+                padding: 10px;
+                margin: 10px;
+                color:#eee;
+                text-decoration: none;
+                font-weight: bold;
+                font-size: 25px;
+                background-color: blue;
+                box-shadow: 0px 0px 3px #5559;
+                border-radius: 4px;
+            }
+            .soon{
+                background-color: green;
+            }
+        </style>
+    </head>
+    <body>
+        <p>Click on the book you want to view on <b>Google Drive</b> where you can download it if you want.</p>
+        <a href="https://drive.google.com/file/d/1v686ZL2GM4-qrJsbMFGeGn1AF1wtllT7/view?usp=sharing" target="_blank">Nuclear (available)</a>
+        <a href="https://drive.google.com/file/d/1P0p1vkNY1r9mCdUGifAyWqdo6oBNds-5/view?usp=sharing" target="_blank">Radiation (available)</a>
+        <a href="https://drive.google.com/file/d/1jMQEH_8E_7l7toJXLkfLPKrYOYdHmQgZ/view?usp=sharing" target="_blank">Programming (available)</a>
+        <a href="https://drive.google.com/file/d/1wSO6Jo0Q7xlucjBfozca5wshJD8mtJ74/view?usp=sharing" target="_blank">Practical (available)</a>
+        <a href="" class="soon">Electronics (coming soon)</a>
+        <a href="" class="soon">Advanced optics (coming soon)</a>
+    </body>
 </html>
