--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
         <a href="https://drive.google.com/file/d/1P0p1vkNY1r9mCdUGifAyWqdo6oBNds-5/view?usp=sharing" target="_blank">Radiation (available)</a>
         <a href="https://drive.google.com/file/d/1jMQEH_8E_7l7toJXLkfLPKrYOYdHmQgZ/view?usp=sharing" target="_blank">Programming (available)</a>
         <a href="https://drive.google.com/file/d/1wSO6Jo0Q7xlucjBfozca5wshJD8mtJ74/view?usp=sharing" target="_blank">Practical (available)</a>
-        <a href="" class="soon">Electronics (coming soon)</a>
+        <a href="https://drive.google.com/file/d/1PSFhAmBlcugH0Qlw2dwJ8se9kUK6PcV7/view?usp=sharing" target="_blank">Electronics (available)</a>
         <a href="" class="soon">Advanced optics (coming soon)</a>
+        <a href="" class="soon">Solid state (coming soon)</a>
+        <a href="" class="soon">Mathematical physics (coming soon)</a>
+        <a href="" class="soon">Quantum mechanics (coming soon)</a>
     </body>
 </html>
