--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a href="https://drive.google.com/file/d/1wSO6Jo0Q7xlucjBfozca5wshJD8mtJ74/view?usp=sharing" target="_blank">Practical (available)</a>
         <a href="https://drive.google.com/file/d/1PSFhAmBlcugH0Qlw2dwJ8se9kUK6PcV7/view?usp=sharing" target="_blank">Electronics (available)</a>
         <a href="./solid-state.html" target="_blank">Solid state (available)</a>
-        <a href="" class="soon">Advanced optics (coming soon)</a>
+        <a href="./optics.html" target="_blank">Advanced optics (available)</a>
         <a href="" class="soon">Mathematical physics (coming soon)</a>
         <a href="" class="soon">Quantum mechanics (coming soon)</a>
     </body>
