--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
         <a href="./solid-state.html" target="_blank">Solid state (available)</a>
         <a href="./optics.html" target="_blank">Advanced optics (available)</a>
         <a href="./mathematical.html" target="_blank">Mathematical physics (available)</a>
-        <a href="" class="soon">Quantum mechanics (coming soon)</a>
+        <a href="./quantum.html" target="_blank">Quantum mechanics (available)</a>
     </body>
 </html>
