--- a/index.html
+++ b/index.html
@@ -2,46 +2,19 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>PDFs</title>
-        <style>
-            *{
-                padding:0;
-                margin:0;
-            }
-            p{
-                padding: 10px;
-                margin: 10px;
-                font-size: 35px;
-                background-color: yellow;
-                box-shadow: 0px 0px 3px #5557;
-                border-radius: 4px;
-            }
-            a{
-                display: block;
-                padding: 10px;
-                margin: 10px;
-                color:#eee;
-                text-decoration: none;
-                font-weight: bold;
-                font-size: 25px;
-                background-color: blue;
-                box-shadow: 0px 0px 3px #5559;
-                border-radius: 4px;
-            }
-            .soon{
-                background-color: green;
-            }
-        </style>
+        <link rel="stylesheet" href="./style.css">
+        <link href='https://fonts.googleapis.com/css?family=Bree Serif' rel='stylesheet'>
     </head>
     <body>
         <p>Click on the book you want to view on <b>Google Drive</b> where you can download it if you want.</p>
-        <a href="https://drive.google.com/file/d/1v686ZL2GM4-qrJsbMFGeGn1AF1wtllT7/view?usp=sharing" target="_blank">Nuclear (available)</a>
-        <a href="https://drive.google.com/file/d/1P0p1vkNY1r9mCdUGifAyWqdo6oBNds-5/view?usp=sharing" target="_blank">Radiation (available)</a>
-        <a href="https://drive.google.com/file/d/1jMQEH_8E_7l7toJXLkfLPKrYOYdHmQgZ/view?usp=sharing" target="_blank">Programming (available)</a>
-        <a href="https://drive.google.com/file/d/1wSO6Jo0Q7xlucjBfozca5wshJD8mtJ74/view?usp=sharing" target="_blank">Practical (available)</a>
-        <a href="https://drive.google.com/file/d/1PSFhAmBlcugH0Qlw2dwJ8se9kUK6PcV7/view?usp=sharing" target="_blank">Electronics (available)</a>
-        <a href="./solid-state.html" target="_blank">Solid state (available)</a>
-        <a href="./optics.html" target="_blank">Advanced optics (available)</a>
-        <a href="./mathematical.html" target="_blank">Mathematical physics (available)</a>
-        <a href="./quantum.html" target="_blank">Quantum mechanics (available)</a>
+        <a href="./nuclear.html" target="_blank">1) Nuclear</a>
+        <a href="./radiation.html" target="_blank">2) Radiation</a>
+        <a href="./programming.html" target="_blank">3) Programming</a>
+        <a href="./practical.html" target="_blank">4) Practical</a>
+        <a href="./electronics.html" target="_blank">5) Electronics</a>
+        <a href="./solid-state.html" target="_blank">6) Solid state</a>
+        <a href="./optics.html" target="_blank">7) Advanced optics</a>
+        <a href="./mathematical.html" target="_blank">8) Mathematical physics</a>
+        <a href="./quantum.html" target="_blank">9) Quantum mechanics</a>
     </body>
 </html>
