--- a/mathematical.html
+++ b/mathematical.html
@@ -2,34 +2,11 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Mathematical Physics</title>
-        <style>
-            *{
-                padding:0;
-                margin:0;
-            }
-            p{
-                padding: 10px;
-                margin: 10px;
-                font-size: 35px;
-                background-color: yellow;
-                box-shadow: 0px 0px 3px #5557;
-                border-radius: 4px;
-            }
-            a{
-                display: block;
-                padding: 10px;
-                margin: 10px;
-                color:#eee;
-                text-decoration: none;
-                font-weight: bold;
-                font-size: 25px;
-                background-color: blue;
-                box-shadow: 0px 0px 3px #5559;
-                border-radius: 4px;
-            }
-        </style>
+        <link rel="stylesheet" href="./style.css">
+        <link href='https://fonts.googleapis.com/css?family=Bree Serif' rel='stylesheet'>
     </head>
     <body>
+        <p><b>Mathematical Physics</b></p>
         <a href="https://docs.google.com/presentation/d/1tTwkE1unI3I1DcD3flZMsMnRJVrp2ips/edit?usp=sharing&ouid=106884812803554546505&rtpof=true&sd=true" target="_blank">1)</a>
         <a href="https://docs.google.com/presentation/d/1a36gQmGxlRJrGCV5o_QlSqU4YwMOXppx/edit?usp=sharing&ouid=106884812803554546505&rtpof=true&sd=true" target="_blank">2)</a>
         <a href="https://docs.google.com/presentation/d/1zJV_TB83Uj8ctUZxnKPoTFdfYdIA_D_i/edit?usp=sharing&ouid=106884812803554546505&rtpof=true&sd=true" target="_blank">3)</a>
