--- a/quantum.html
+++ b/quantum.html
@@ -2,34 +2,11 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Quantum Mechanics</title>
-        <style>
-            *{
-                padding:0;
-                margin:0;
-            }
-            p{
-                padding: 10px;
-                margin: 10px;
-                font-size: 35px;
-                background-color: yellow;
-                box-shadow: 0px 0px 3px #5557;
-                border-radius: 4px;
-            }
-            a{
-                display: block;
-                padding: 10px;
-                margin: 10px;
-                color:#eee;
-                text-decoration: none;
-                font-weight: bold;
-                font-size: 25px;
-                background-color: blue;
-                box-shadow: 0px 0px 3px #5559;
-                border-radius: 4px;
-            }
-        </style>
+        <link rel="stylesheet" href="./style.css">
+        <link href='https://fonts.googleapis.com/css?family=Bree Serif' rel='stylesheet'>
     </head>
     <body>
+        <p><b>Quantum Mechanics</b></p>
         <a href="https://docs.google.com/presentation/d/1spjGYdx8__IWBchq_M2VDqIFdAZto9Z8/edit?usp=sharing&ouid=106884812803554546505&rtpof=true&sd=true" target="_blank">1)</a>
         <a href="https://docs.google.com/presentation/d/1F5z9IsmYP51espXyfRGyvNurQHDrbyyR/edit?usp=sharing&ouid=106884812803554546505&rtpof=true&sd=true" target="_blank">2)</a>
         <a href="https://docs.google.com/presentation/d/18ryEgeKdxAQeiW9xtVcz0HXvaqMkz-4m/edit?usp=sharing&ouid=106884812803554546505&rtpof=true&sd=true" target="_blank">3)</a>
