--- a/solid-state.html
+++ b/solid-state.html
@@ -2,34 +2,11 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Solid State</title>
-        <style>
-            *{
-                padding:0;
-                margin:0;
-            }
-            p{
-                padding: 10px;
-                margin: 10px;
-                font-size: 35px;
-                background-color: yellow;
-                box-shadow: 0px 0px 3px #5557;
-                border-radius: 4px;
-            }
-            a{
-                display: block;
-                padding: 10px;
-                margin: 10px;
-                color:#eee;
-                text-decoration: none;
-                font-weight: bold;
-                font-size: 25px;
-                background-color: blue;
-                box-shadow: 0px 0px 3px #5559;
-                border-radius: 4px;
-            }
-        </style>
+        <link rel="stylesheet" href="./style.css">
+        <link href='https://fonts.googleapis.com/css?family=Bree Serif' rel='stylesheet'>
     </head>
     <body>
+        <p><b>Solid State</b></p>
         <a href="https://docs.google.com/presentation/d/1bU2YVhbKw4TWhCspl5cgQ3zLInAtiti3/edit?usp=sharing&ouid=106884812803554546505&rtpof=true&sd=true" target="_blank">1) Introduction to solid state</a>
         <a href="https://docs.google.com/presentation/d/170shvmTZ-XG4PZd9dezX3yh5dTOc6_we/edit?usp=sharing&ouid=106884812803554546505&rtpof=true&sd=true" target="_blank">2) Atomic packing factor</a>
         <a href="https://docs.google.com/presentation/d/1MdJdUg6a5plRTgev0PCJ7E4nvErlDkiO/edit?usp=sharing&ouid=106884812803554546505&rtpof=true&sd=true" target="_blank">3) Crystal symmetry</a>
