--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link href='https://fonts.googleapis.com/css?family=Bree Serif' rel='stylesheet'>
     </head>
     <body>
-        <p>Click on the book you want to view on <b>Google Drive</b> where you can download it if you want.</p>
+        <p>Click on the subject you want to view its PDFs on <b>Google Drive</b> where you can download it if you want.</p>
         <a href="./nuclear.html" target="_blank">1) Nuclear</a>
         <a href="./radiation.html" target="_blank">2) Radiation</a>
         <a href="./programming.html" target="_blank">3) Programming</a>
