--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
         <link href='https://fonts.googleapis.com/css?family=Bree Serif' rel='stylesheet'>
     </head>
     <body>
-        <p>Click on the subject you want to view its PDFs on <b>Google Drive</b> where you can download it if you want.</p>
-        <a href="./nuclear.html" target="_blank">1) Nuclear</a>
-        <a href="./radiation.html" target="_blank">2) Radiation</a>
-        <a href="./programming.html" target="_blank">3) Programming</a>
-        <a href="./practical.html" target="_blank">4) Practical</a>
+        <p>Click on the subject you want to view its PDFs on <b>Google Drive</b> where you can download them if you want.</p>
+        <a href="./nuclear.html" target="_blank">1) Nuclear Physics</a>
+        <a href="./radiation.html" target="_blank">2) Radiation Physics</a>
+        <a href="./programming.html" target="_blank">3) C# Programming</a>
+        <a href="./practical.html" target="_blank">4) Practical Physics</a>
         <a href="./electronics.html" target="_blank">5) Electronics</a>
-        <a href="./solid-state.html" target="_blank">6) Solid state</a>
-        <a href="./optics.html" target="_blank">7) Advanced optics</a>
-        <a href="./mathematical.html" target="_blank">8) Mathematical physics</a>
-        <a href="./quantum.html" target="_blank">9) Quantum mechanics</a>
+        <a href="./solid-state.html" target="_blank">6) Solid State Physics</a>
+        <a href="./optics.html" target="_blank">7) Advanced Optics</a>
+        <a href="./mathematical.html" target="_blank">8) Mathematical Physics</a>
+        <a href="./quantum.html" target="_blank">9) Quantum Mechanics</a>
     </body>
 </html>
