--- a/programming.html
+++ b/programming.html
@@ -1,12 +1,17 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Programming</title>
+        <title>C# Programming</title>
         <link rel="stylesheet" href="./style.css">
         <link href='https://fonts.googleapis.com/css?family=Bree Serif' rel='stylesheet'>
     </head>
     <body>
-        <p><b>Programming</b></p>
+        <p><b>C# Programming</b></p>
         <a href="https://drive.google.com/file/d/1jMQEH_8E_7l7toJXLkfLPKrYOYdHmQgZ/view?usp=sharing" target="_blank">1) The Book</a>
+        <a href="https://drive.google.com/file/d/11KR703JVfyDP2FVakw61vMHbrOzbSXtE/view?usp=sharing" target="_blank">2) Zoom Meeting Record</a>
+        <a href="https://forms.gle/krNSsPHYgPFd2taU9" target="_blank">3) Zoom Meeting Feedback</a>
+        <a href="https://www.w3schools.com/cs/index.php" target="_blank">4) Reference</a>
+        <a href="https://www.programiz.com/csharp-programming/online-compiler/" target="_blank">5) Online Compiler</a>
+        <a href="./projects.html" target="_blank">6) Projects</a>
     </body>
 </html>
