--- a/radiation.html
+++ b/radiation.html
@@ -1,12 +1,13 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Radiation</title>
+        <title>Radiation Physics</title>
         <link rel="stylesheet" href="./style.css">
         <link href='https://fonts.googleapis.com/css?family=Bree Serif' rel='stylesheet'>
     </head>
     <body>
-        <p><b>Radiation</b></p>
+        <p><b>Radiation Physics</b></p>
         <a href="https://drive.google.com/file/d/1P0p1vkNY1r9mCdUGifAyWqdo6oBNds-5/view?usp=sharing" target="_blank">1) The Book</a>
+        <a href="https://drive.google.com/file/d/1CFhceM7xrh5PQEG-BPmXV7dpxJnlQ0k1/view" target="_blank">2) Lena's Summary For Chapter 1</a>
     </body>
 </html>
