--- a/programming.html
+++ b/programming.html
@@ -8,10 +8,11 @@
     <body>
         <p><b>C# Programming</b></p>
         <a href="https://drive.google.com/file/d/1jMQEH_8E_7l7toJXLkfLPKrYOYdHmQgZ/view?usp=sharing" target="_blank">1) The Book</a>
-        <a href="https://drive.google.com/file/d/11KR703JVfyDP2FVakw61vMHbrOzbSXtE/view?usp=sharing" target="_blank">2) Zoom Meeting Record</a>
-        <a href="https://www.surveyheart.com/form/61ab7863217fcd738de378f4" target="_blank">3) Zoom Meeting Feedback</a>
-        <a href="https://www.w3schools.com/cs/index.php" target="_blank">4) Reference</a>
-        <a href="https://www.programiz.com/csharp-programming/online-compiler/" target="_blank">5) Online Compiler</a>
-        <a href="./projects.html" target="_blank">6) Projects</a>
+        <a href="https://drive.google.com/file/d/11KR703JVfyDP2FVakw61vMHbrOzbSXtE/view?usp=sharing" target="_blank">2) Zoom Meeting Record 1</a>
+        <a href="https://drive.google.com/file/d/1kmIrOqTh-hqKHmPW1XmPziqCcqPk3fjb/view?usp=sharing" target="_blank">3) Zoom Meeting Record 2</a>
+        <a href="https://www.surveyheart.com/form/61ab7863217fcd738de378f4" target="_blank">4) Zoom Meeting Feedback</a>
+        <a href="https://www.w3schools.com/cs/index.php" target="_blank">5) Reference</a>
+        <a href="https://www.programiz.com/csharp-programming/online-compiler/" target="_blank">6) Online Compiler</a>
+        <a href="./projects.html" target="_blank">7) Projects</a>
     </body>
 </html>
