--- a/nuclear.html
+++ b/nuclear.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <p><b>Nuclear Physics</b></p>
-        <a href="https://drive.google.com/file/d/1v686ZL2GM4-qrJsbMFGeGn1AF1wtllT7/view?usp=sharing" target="_blank">1) The Book</a>
+        <a href="https://drive.google.com/file/d/1v686ZL2GM4-qrJsbMFGeGn1AF1wtllT7/view" target="_blank">1) The Book</a>
+        <a href="https://drive.google.com/file/d/1uYsfiq6C9IE0rOjTRwwAykTifsleplD1/view" target="_blank">2) Ali's Summary For Chapter 0 and 1</a>
     </body>
 </html>
