--- a/nuclear.html
+++ b/nuclear.html
@@ -9,5 +9,7 @@
         <p><b>Nuclear Physics</b></p>
         <a href="https://drive.google.com/file/d/1v686ZL2GM4-qrJsbMFGeGn1AF1wtllT7/view" target="_blank">1) The Book</a>
         <a href="https://drive.google.com/file/d/1uYsfiq6C9IE0rOjTRwwAykTifsleplD1/view" target="_blank">2) Ali's Summary For Chapter 0 and 1</a>
+        <a href="https://drive.google.com/file/d/1vCuxT1mDE2NMxBmxsNsvaYfozSnlPe3-/view" target="_blank">2) Saber's Summary For Chapter 0</a>
+        <a href="https://drive.google.com/file/d/1v4MqzDoV7es6ExDXCFoJ5Z9uuy61mXE9/view" target="_blank">2) Saber's Summary For Chapter 1</a>
     </body>
 </html>
