--- a/quantum.html
+++ b/quantum.html
@@ -12,5 +12,6 @@
         <a href="https://docs.google.com/presentation/d/18ryEgeKdxAQeiW9xtVcz0HXvaqMkz-4m/edit?usp=sharing&ouid=106884812803554546505&rtpof=true&sd=true" target="_blank">3)</a>
         <a href="https://docs.google.com/presentation/d/1dA27HUDSJ36P0_qAv3i93g5aNcMQ_kMD/edit?usp=sharing&ouid=106884812803554546505&rtpof=true&sd=true" target="_blank">4)</a>
         <a href="https://docs.google.com/presentation/d/1tnX5rwBPtgjePAX1C0dCL1R7i-S9bzh2/edit?usp=sharing&ouid=106884812803554546505&rtpof=true&sd=true" target="_blank">5)</a>
+        <a href="https://docs.google.com/presentation/d/13Q_d39-ZL2-2riqfQ3mUzOLm6Lr_y6Ge/edit?usp=sharing&ouid=106884812803554546505&rtpof=true&sd=true" target="_blank">6)</a>
     </body>
 </html>
