--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
         <a href="./optics.html" target="_blank">7) Advanced Optics</a>
         <a href="./mathematical.html" target="_blank">8) Mathematical Physics</a>
         <a href="./quantum.html" target="_blank">9) Quantum Mechanics</a>
+        <a href="./exams.html" target="_blank">10) Final exams of previous years</a>
     </body>
 </html>
