--- a/mathematical.html
+++ b/mathematical.html
@@ -12,5 +12,6 @@
         <a href="https://docs.google.com/presentation/d/19MPjnjNFMJpGJseWH7Mw7gObR3NUxYRu/edit?usp=sharing&ouid=106884812803554546505&rtpof=true&sd=true" target="_blank">3)</a>
         <a href="https://docs.google.com/presentation/d/1qfIKtU0tn6_5BgdyMeBDD7Vm2IUqfzU8/edit?usp=sharing&ouid=106884812803554546505&rtpof=true&sd=true" target="_blank">4)</a>
         <a href="https://docs.google.com/presentation/d/1caFbNRTxIeSIAXvIxCfJaMySptCb2ipu/edit?usp=sharing&ouid=106884812803554546505&rtpof=true&sd=true" target="_blank">5)</a>
+        <a href="https://drive.google.com/file/d/1iqN5t1CA1uWb050v17rQ_hlmQE0zB1J4/view?usp=sharing" target="_blank">6) Hager's summary for lectures 1 and 2</a>
     </body>
 </html>
