--- a/projects.html
+++ b/projects.html
@@ -111,6 +111,51 @@ namespace EvenOrOdd
         <p class="hint">Expected Output 2: Failed</p>
         <pre class="answer">Answer is not available, Do it yourself.</pre>
 
+        <pre>Console output and user input
+    1. Write a C# program to print Hello World in two lines.
+    2. Write a C# program to print the concatenation of two strings.
+    3. Write a C# program to print Hello and your name in one line.
+    4. Write a C# program that takes an age (for example 20) as input and prints something as "You look older than 20".
+
+Basic operations
+    5. Write a C# program to print the result of the specified operations 5*3+1.
+    6. Write a C# program to print the sum of two numbers.
+    7. Write a C# program to print the sum of two integer variables.
+
+Variables
+    8. Write a C# program to print the sum of two integers entered by the user.
+    9. Write a C# program to print the output of multiplication of three numbers which will be entered by the user.
+    10. Write a C# program to print on screen the output of adding, subtracting, multiplying and dividing of two numbers which will be entered by the user.
+    11. Write a C# program to swap two numbers.
+    12. Write a C# program that takes four numbers as input to calculate and print the average.
+    13. Write a C# program to convert from celsius degrees to Kelvin and Fahrenheit. [k=c+273 , f=(c*18/10)+32]
+    14. Write a C# program that takes the radius of a circle as input and calculate the perimeter and area of the circle.
+
+Conditional statements
+    15. Write a C# program to accept two integers and check whether they are equal or not.
+    16. Write a C# program to check whether a given number is even or odd.
+    17. Write a C# program to check whether a given number is positive or negative.
+    18. Write a C# program to find whether a given year is a leap year or not.
+    19. Write a C# program to check if a student has failed(degree<50) or not(degree>=50).
+    20. Write a C# program to check if a given positive number is a multiple of 5.
+    21. Write a C# program to check if a given integer is within the interval [100,500].
+    22. Write a C# program to check two given integers and return true if one is negative and one is positive.
+    23. Write a C# program to compute the sum of two given integers, if two values are equal then return the triple of their sum.
+    24. Write a C# program to check if a given integer is within 20 of 100 or 200.
+    25. Write a C# program to accept a coordinate point in an XY coordinate system and determine in which quadrant the coordinate point lies.
+    26. Write a C# program that takes two numbers as input and perform an operation (+,-,*,x,/) on them and displays the result of that operation.
+
+Loops
+    27. Write a C# program to print the odd numbers from 1 to 99. Prints one number per line.
+    28. Write a C# program and compute the sum of the digits of an integer.
+    29. Write a C# program that takes a number as input and print its multiplication table.
+    30. Write a C# program to accept the age of 10 students and determine whether each student can log in or not.
+
+Built-in methods
+    31. Write a C# program to find the largest and lowest values from two integer values.
+    32. Write a C# program to find the largest and lowest values from three integer values.
+    33. Write a C# program to get the absolute value of the difference between two given numbers.</pre>
+
         <a href="https://www.w3resource.com/csharp-exercises/" target="_blank">More Projects</a>
         <a href="https://www.w3schools.com/cs/cs_examples.php" target="_blank">Examples</a>
         <a href="https://www.w3schools.com/cs/exercise.php?filename=exercise_syntax1" target="_blank">Exercises</a>
