--- a/electronics.html
+++ b/electronics.html
@@ -6,10 +6,14 @@
         <link href='https://fonts.googleapis.com/css?family=Bree Serif' rel='stylesheet'>
     </head>
     <body>
+        <div>
+            <a class="btn" href="./index.html">Back</a>
+        </div>
         <p><b>Electronics</b></p>
         <a href="https://drive.google.com/file/d/1PSFhAmBlcugH0Qlw2dwJ8se9kUK6PcV7/view?usp=sharing" target="_blank">1) The Book</a>
         <a href="https://drive.google.com/file/d/1F4YTdNjraDz1SnRpvGuxIakBdZ1Hxs7t/view?usp=sharing" target="_blank">2) El S3ody's summary for chapter 1</a>
         <a href="https://drive.google.com/file/d/1SSHf5gHqrg59Z0Wmvp1S6SwQd-mEWVWv/view?usp=sharing" target="_blank">3) El S3ody's summary for chapter 2</a>
         <a href="https://drive.google.com/file/d/1tUXpn4UqrXcKgQybLyTgGggiaru76fVw/view?usp=sharing" target="_blank">4) El S3ody's summary for chapter 3</a>
     </body>
+    <script src="./script.js"></script>
 </html>
