--- a/index.html
+++ b/index.html
@@ -1,21 +1,29 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>PDFs</title>
+        <title>Physics Department</title>
         <link rel="stylesheet" href="./style.css">
         <link href='https://fonts.googleapis.com/css?family=Bree Serif' rel='stylesheet'>
     </head>
     <body>
-        <p>Click on the subject you want to view its PDFs on <b>Google Drive</b> where you can download them if you want.</p>
-        <a href="./nuclear.html" target="_blank">1) Nuclear Physics</a>
-        <a href="./radiation.html" target="_blank">2) Radiation Physics</a>
-        <a href="./programming.html" target="_blank">3) C# Programming</a>
-        <a href="./practical.html" target="_blank">4) Practical Physics</a>
-        <a href="./electronics.html" target="_blank">5) Electronics</a>
-        <a href="./solid-state.html" target="_blank">6) Solid State Physics</a>
-        <a href="./optics.html" target="_blank">7) Advanced Optics</a>
-        <a href="./mathematical.html" target="_blank">8) Mathematical Physics</a>
-        <a href="./quantum.html" target="_blank">9) Quantum Mechanics</a>
-        <a href="./exams.html" target="_blank">10) Final exams of previous years</a>
+        <div>
+            <a class="btn" onclick="changeTheme()">Change Theme</a>
+        </div>
+        <a href="./nuclear.html">1) Nuclear Physics</a>
+        <a href="./radiation.html">2) Radiation Physics</a>
+        <a href="./programming.html">3) C# Programming</a>
+        <a href="./practical.html">4) Practical Physics</a>
+        <a href="./electronics.html">5) Electronics</a>
+        <a href="./solid-state.html">6) Solid State Physics</a>
+        <a href="./optics.html">7) Advanced Optics</a>
+        <a href="./mathematical.html">8) Mathematical Physics</a>
+        <a href="./quantum.html">9) Quantum Mechanics</a>
+        <a href="./exams.html">10) Final exams of previous years</a>
+        <!--
+            <div>
+                <p class="btn">Developed by <a class="no-style" href="https://ahmed0saber.github.io/bootstrap-projects/portfolio/" target="_blank">Ahmed Saber</a></p>
+            </div>
+        -->
     </body>
+    <script src="./script.js"></script>
 </html>
