--- a/optics.html
+++ b/optics.html
@@ -6,7 +6,11 @@
         <link href='https://fonts.googleapis.com/css?family=Bree Serif' rel='stylesheet'>
     </head>
     <body>
+        <div>
+            <a class="btn" href="./index.html">Back</a>
+        </div>
         <p><b>Advanced Optics</b></p>
         <a href="https://drive.google.com/file/d/1aggPlh1heAZbye1mGk99ee_C5tOl6WYZ/view?usp=sharing" target="_blank">1) Ellipsometry</a>
     </body>
+    <script src="./script.js"></script>
 </html>
