--- a/programming.html
+++ b/programming.html
@@ -6,16 +6,20 @@
         <link href='https://fonts.googleapis.com/css?family=Bree Serif' rel='stylesheet'>
     </head>
     <body>
+        <div>
+            <a class="btn" href="./index.html">Back</a>
+        </div>
         <p><b>C# Programming</b></p>
         <a href="https://drive.google.com/file/d/1jMQEH_8E_7l7toJXLkfLPKrYOYdHmQgZ/view?usp=sharing" target="_blank">1) The Book</a>
         <a href="https://drive.google.com/file/d/11KR703JVfyDP2FVakw61vMHbrOzbSXtE/view?usp=sharing" target="_blank">2) Zoom Meeting Record 1</a>
         <a href="https://drive.google.com/file/d/1kmIrOqTh-hqKHmPW1XmPziqCcqPk3fjb/view?usp=sharing" target="_blank">3) Zoom Meeting Record 2</a>
-        <a href="./zoom-meeting.html" target="_blank">4) Zoom Meeting Record 3 alternative</a>
+        <a href="./zoom-meeting.html">4) Zoom Meeting Record 3 alternative</a>
         <a href="https://drive.google.com/file/d/1nFgCIsyDXODRtBOKwcxLTEwBjbfT4Nqe/view?usp=sharing" target="_blank">5) Zoom Meeting Record 4</a>
         <a href="https://drive.google.com/file/d/1JB5woz3PYq1JAydw_fGKrPBcb5LWW-pw/view?usp=sharing" target="_blank">6) Zoom Meeting Record 5</a>
         <a href="https://www.surveyheart.com/form/61ab7863217fcd738de378f4" target="_blank">7) Zoom Meeting Feedback</a>
         <a href="https://www.w3schools.com/cs/index.php" target="_blank">8) Reference</a>
         <a href="https://www.programiz.com/csharp-programming/online-compiler/" target="_blank">9) Online Compiler</a>
-        <a href="./projects.html" target="_blank">10) Projects</a>
+        <a href="./projects.html">10) Projects</a>
     </body>
+    <script src="./script.js"></script>
 </html>
