--- a/quantum.html
+++ b/quantum.html
@@ -6,6 +6,9 @@
         <link href='https://fonts.googleapis.com/css?family=Bree Serif' rel='stylesheet'>
     </head>
     <body>
+        <div>
+            <a class="btn" href="./index.html">Back</a>
+        </div>
         <p><b>Quantum Mechanics</b></p>
         <a href="https://docs.google.com/presentation/d/1spjGYdx8__IWBchq_M2VDqIFdAZto9Z8/edit?usp=sharing&ouid=106884812803554546505&rtpof=true&sd=true" target="_blank">1)</a>
         <a href="https://docs.google.com/presentation/d/1F5z9IsmYP51espXyfRGyvNurQHDrbyyR/edit?usp=sharing&ouid=106884812803554546505&rtpof=true&sd=true" target="_blank">2)</a>
@@ -14,4 +17,5 @@
         <a href="https://docs.google.com/presentation/d/1tnX5rwBPtgjePAX1C0dCL1R7i-S9bzh2/edit?usp=sharing&ouid=106884812803554546505&rtpof=true&sd=true" target="_blank">5)</a>
         <a href="https://docs.google.com/presentation/d/13Q_d39-ZL2-2riqfQ3mUzOLm6Lr_y6Ge/edit?usp=sharing&ouid=106884812803554546505&rtpof=true&sd=true" target="_blank">6)</a>
     </body>
+    <script src="./script.js"></script>
 </html>
