--- a/radiation.html
+++ b/radiation.html
@@ -6,9 +6,13 @@
         <link href='https://fonts.googleapis.com/css?family=Bree Serif' rel='stylesheet'>
     </head>
     <body>
+        <div>
+            <a class="btn" href="./index.html">Back</a>
+        </div>
         <p><b>Radiation Physics</b></p>
         <a href="https://drive.google.com/file/d/1P0p1vkNY1r9mCdUGifAyWqdo6oBNds-5/view" target="_blank">1) The Book</a>
         <a href="https://drive.google.com/file/d/1CFhceM7xrh5PQEG-BPmXV7dpxJnlQ0k1/view" target="_blank">2) Lena's Summary For Chapter 1</a>
         <a href="https://drive.google.com/file/d/1xraoMpHIbNgL63wbvNfsmpNOFkkHzeI-/view" target="_blank">3) Mind Map for Chapter 1</a>
     </body>
+    <script src="./script.js"></script>
 </html>
