--- a/exams.html
+++ b/exams.html
@@ -6,8 +6,12 @@
         <link href='https://fonts.googleapis.com/css?family=Bree Serif' rel='stylesheet'>
     </head>
     <body>
+        <div>
+            <a class="btn" href="./index.html">Back</a>
+        </div>
         <p>Final Exams</p>
         <a href="https://drive.google.com/file/d/1UWjTRu8H74itj-HfcpkySnvXMZ3B-Qok/view?usp=sharing" target="_blank">1)</a>
         <a href="https://drive.google.com/file/d/1ku6zO3Y4s0rWntT53am3kZNnqGdE83RI/view?usp=sharing" target="_blank">2)</a>
     </body>
+    <script src="./script.js"></script>
 </html>
