--- a/nuclear.html
+++ b/nuclear.html
@@ -6,6 +6,9 @@
         <link href='https://fonts.googleapis.com/css?family=Bree Serif' rel='stylesheet'>
     </head>
     <body>
+        <div>
+            <a class="btn" href="./index.html">Back</a>
+        </div>
         <p><b>Nuclear Physics</b></p>
         <a href="https://drive.google.com/file/d/1v686ZL2GM4-qrJsbMFGeGn1AF1wtllT7/view" target="_blank">1) The Book</a>
         <a href="https://drive.google.com/file/d/1uYsfiq6C9IE0rOjTRwwAykTifsleplD1/view" target="_blank">2) Ali's Summary For Chapter 0 and 1</a>
@@ -13,4 +16,5 @@
         <a href="https://drive.google.com/file/d/1v4MqzDoV7es6ExDXCFoJ5Z9uuy61mXE9/view" target="_blank">4) Saber's Summary For Chapter 1</a>
         <a href="https://drive.google.com/file/d/1z66irqgw1NoKPzFvhyVnKRpNTHw7xmYi/view" target="_blank">5) Hager's Summary For Chapter 0 and 1</a>
     </body>
+    <script src="./script.js"></script>
 </html>
