--- a/practical.html
+++ b/practical.html
@@ -6,7 +6,11 @@
         <link href='https://fonts.googleapis.com/css?family=Bree Serif' rel='stylesheet'>
     </head>
     <body>
+        <div>
+            <a class="btn" href="./index.html">Back</a>
+        </div>
         <p><b>Practical Physics</b></p>
         <a href="https://drive.google.com/file/d/1wSO6Jo0Q7xlucjBfozca5wshJD8mtJ74/view?usp=sharing" target="_blank">1) The Book</a>
     </body>
+    <script src="./script.js"></script>
 </html>
