--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <div>
             <a class="btn" onclick="changeTheme()">Change Theme</a>
         </div>
+        <p>Physics Department</p>
         <a href="./nuclear.html">1) Nuclear Physics</a>
         <a href="./radiation.html">2) Radiation Physics</a>
         <a href="./programming.html">3) C# Programming</a>
